test/CheckError/Primitives/InvalidTemplateStaticArraySizeParameter.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <double V>
// CHECK: .loci:6:8: error: static array size has type 'double_t', which doesn't match expected type 'size_t'
import int[V] invalidDoubleSizeParameter();

// CHECK: 1 error generated.
